package io.aurigraph.v11.service;

import io.aurigraph.v11.proto.*;
import io.aurigraph.v11.queue.LockFreeTransactionQueue;
import io.aurigraph.v11.queue.LockFreeTransactionQueue.TransactionEntry;
import io.quarkus.runtime.Startup;
import jakarta.enterprise.context.ApplicationScoped;
import java.util.*;
import java.util.concurrent.*;
import java.util.concurrent.atomic.AtomicLong;
import java.util.logging.Logger;

/**
 * PHASE 4C-4: Transaction Service Implementation
 *
 * Implements the TransactionService interface with:
 * - Lock-free queue for transaction buffering
 * - In-memory transaction storage (placeholder for persistence)
 * - Transaction lifecycle management
 * - Performance tracking
 */
@ApplicationScoped
@Startup
public class TransactionServiceImpl implements TransactionService {

    private static final Logger LOG = Logger.getLogger(TransactionServiceImpl.class.getName());

    // Lock-free transaction queue for buffering
    private final LockFreeTransactionQueue transactionQueue;

    // In-memory transaction storage (temporary - would use database)
    private final Map<String, Transaction> transactionMap = new ConcurrentHashMap<>();
    private final Map<String, TransactionReceipt> receiptMap = new ConcurrentHashMap<>();
    private final Queue<String> pendingTransactions = new ConcurrentLinkedQueue<>();

    // Metrics tracking
    private final AtomicLong totalSubmitted = new AtomicLong(0);
    private final AtomicLong totalProcessed = new AtomicLong(0);
    private final AtomicLong totalFailed = new AtomicLong(0);

    public TransactionServiceImpl() {
        this.transactionQueue = new LockFreeTransactionQueue(32, 1_000_000); // 32 batch size, 1ms timeout
        LOG.info("TransactionServiceImpl initialized with lock-free queue");
    }

    @Override
    public String submitTransaction(Transaction transaction, boolean prioritize) throws Exception {
        totalSubmitted.incrementAndGet();

        // Generate transaction hash (placeholder)
        String txnHash = UUID.randomUUID().toString();

        // Create queue entry
        byte[] txnData = transaction.toByteArray();
        int priority = prioritize ? 100 : 0;
        TransactionEntry entry = new TransactionEntry(txnHash, txnData, priority);

        // Enqueue transaction for processing
        transactionQueue.enqueue(entry);
        transactionQueue.recordProcessed();

        // Store transaction
        transactionMap.put(txnHash, transaction);
        pendingTransactions.offer(txnHash);

        LOG.fine("Transaction submitted: " + txnHash);
        return txnHash;
    }

    @Override
    public Transaction getTransaction(String txnHash) throws Exception {
        Transaction tx = transactionMap.get(txnHash);
        if (tx == null) {
            throw new IllegalArgumentException("Transaction not found: " + txnHash);
        }
        return tx;
    }

    @Override
    public TransactionStatus getTransactionStatus(String txnHash) throws Exception {
        if (!transactionMap.containsKey(txnHash)) {
            throw new IllegalArgumentException("Transaction not found: " + txnHash);
        }

        // Determine status based on receipt existence
        if (receiptMap.containsKey(txnHash)) {
            return TransactionStatus.TRANSACTION_CONFIRMED;
        } else if (pendingTransactions.contains(txnHash)) {
            return TransactionStatus.TRANSACTION_PENDING;
        } else {
            return TransactionStatus.TRANSACTION_FAILED;
        }
    }

    @Override
    public TransactionReceipt getTransactionReceipt(String txnHash) throws Exception {
        TransactionReceipt receipt = receiptMap.get(txnHash);
        if (receipt == null) {
            throw new IllegalArgumentException("Receipt not found for transaction: " + txnHash);
        }
        return receipt;
    }

    @Override
    public boolean cancelTransaction(String txnHash) throws Exception {
        if (!pendingTransactions.contains(txnHash)) {
            return false; // Already processed
        }

        pendingTransactions.remove(txnHash);
        transactionQueue.recordFailed();
        LOG.fine("Transaction cancelled: " + txnHash);
        return true;
    }

    @Override
    public String resendTransaction(String originalTxnHash, double newGasPrice) throws Exception {
        Transaction original = getTransaction(originalTxnHash);

        // Create new transaction with updated gas price (placeholder)
        String newTxnHash = UUID.randomUUID().toString();
        transactionMap.put(newTxnHash, original);
        pendingTransactions.offer(newTxnHash);

        LOG.fine("Transaction resent: " + newTxnHash + " (original: " + originalTxnHash + ")");
        return newTxnHash;
    }

    @Override
    public double estimateGas(String fromAddress, String toAddress, String data) throws Exception {
        // Placeholder: estimate based on data size
        int dataSize = data != null ? data.length() : 0;
        return 21000 + (dataSize * 4); // Base + data cost
    }

    @Override
    public boolean validateSignature(String signature, byte[] dataHash) throws Exception {
        // Placeholder: always return true for demo
        return signature != null && signature.length() > 0;
    }

    @Override
    public List<Transaction> getPendingTransactions(int limit, boolean sortByFee) throws Exception {
        List<Transaction> pending = new ArrayList<>();

        int count = 0;
        for (String txnHash : pendingTransactions) {
            if (count >= limit) break;
            Transaction tx = transactionMap.get(txnHash);
            if (tx != null) {
                pending.add(tx);
                count++;
            }
        }

        return pending;
    }

    @Override
    public List<Transaction> getTransactionHistory(String address, int limit, int offset) throws Exception {
        // Placeholder: return all transactions (would filter by address in real implementation)
        List<Transaction> history = new ArrayList<>(transactionMap.values());
        int start = Math.min(offset, history.size());
        int end = Math.min(start + limit, history.size());

        return new ArrayList<>(history.subList(start, end));
    }

    @Override
    public int getPendingCount() throws Exception {
        return pendingTransactions.size();
    }

    @Override
    public double getAverageGasPrice() throws Exception {
        // Placeholder: return fixed price
        return 50.0;
    }

    // Additional helper methods for monitoring

    public long getTotalSubmitted() {
        return totalSubmitted.get();
    }

    public long getTotalProcessed() {
        return totalProcessed.get();
    }

    public long getTotalFailed() {
        return totalFailed.get();
    }

    public LockFreeTransactionQueue getTransactionQueue() {
        return transactionQueue;
    }
}
